dodate funkcionalnosti za post i get

--- a/index.html
+++ b/index.html
@@ -73,14 +73,13 @@
                 <option value="3">3</option>
                 <option value="4">4</option>
             </select>
+            
+        </div>
+        <div id="greska">
 
-            <div id="greska">
-
-            </div>
-
-            <div id="submit">
-                <button type="button">Posalji zahtev</button>
-            </div>
+        </div>
+        <div id="submit">
+            <button type="button">Posalji zahtev</button>
         </div>
     </form>
     
@@ -96,6 +95,10 @@
         }
     };
     skloniBlokove();
+
+    $("input[name=http_zahtev]").on("click", prikaziBlok);
+    $("input[name=odabir_tabele]").on("click", resetHTTP);
+    $("button").on("click", posaljiZahtev);
 
     function prikaziBlok(){
         switch($("input[name=http_zahtev]:checked")[0].id){
@@ -145,6 +148,54 @@
                 break;        
             default:
                 break;
+        }
+    }
+
+    function resetHTTP(){
+        skloniBlokove();
+        $("input[name=http_zahtev]").prop('checked', false);
+
+    }
+
+    function posaljiZahtev(){
+        if($("input[name=odabir_tabele]:checked").length!=0 && $("input[name=http_zahtev]:checked").length!=0){
+            var tabela = $("input[name=odabir_tabele]:checked")[0].id;
+            switch ( $("input[name=http_zahtev]:checked")[0].id){
+                case "get":
+                    if(tabela=="radio_novosti"){
+                        $.getJSON("http://localhost:8080/rest/rest/novosti", function(data){
+                            document.getElementById("get_odgovor").innerHTML = JSON.stringify(data,null,2);
+                        });
+                    }else{
+                        $.getJSON("http://localhost:8080/rest/rest/kategorije", function(data){
+                            document.getElementById("get_odgovor").innerHTML = JSON.stringify(data,null,2);
+                        });
+                    }
+                    break;
+                case "post":
+                    if(tabela=="radio_novosti"){
+                        var values = {
+                            "naslov": $("input[name=naslov_novosti]").val(),
+                            "tekst":$("#tekst_novosti").val(),
+                            "kategorija_id": parseInt($("#kategorija_odabir").val())
+                        };
+                        console.log(values);
+                        $.post("http://localhost:8080/rest/rest/novosti", JSON.stringify(values),function(data){
+                            alert("Odgovor od servera> "+data['poruka']);
+                        });
+                    }else{
+                        var values ={
+                            "kategorija": $("input[name=kategorija_naziv]").val(),
+                        }
+                        console.log(values);
+                        $.post("http://localhost:8080/rest/rest/kategorije", JSON.stringify(values),function(data){
+                            alert("Odgovor od servera> "+data['poruka']);
+                        });
+                        break;
+                    }
+                default:
+                    console.log("def");
+            }
         }
     }
 </script>
